--- a/content/pages/about/index.mdx
+++ b/content/pages/about/index.mdx
@@ -4,4 +4,13 @@ slug: "/about"
 cover: "./mountains.jpg"
 ---
 
-Hi, thanks for using the theme!
+Hi there!
+Carlos here, a UX/UI designer making the switch to a Product Owner role.
+
+I love the opportunity to more directly affect a product's success. With my ten years of experience in the design field. I have realized the importance or creating amazing, data-driven, user-centered solutions.
+
+I've worked on a variety of projects, from small startups to large enterprises, and I've always enjoyed the challenge of understanding user needs and translating them into intuitive and engaging experiences.
+In addition, my background as an industrial designer and entrepreneur has helped me to collaborate with people that have different needs and aspirations. Allowing me to empathize and communicate clearly with different end-users or stakeholders.
+
+I enjoy reading and learning about digital products, AI, design, cloud computing, robotic process automation, and data & business analysis during my free time.
+Occasionally, I do photography  and glassblowing .
